--- a/cruzadinha.css
+++ b/cruzadinha.css
@@ -1,9 +1,22 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
 div{
     height: 40px;
     width: 40px;
     margin-top: 10%;
     border: solid 1px black;
-    
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+.primeira div{
+    display: flex;
+    margin-left: 1px;
 }
 
 .ram {
@@ -12,5 +25,53 @@ div{
     width: 150px;
     align-items: center;
     border: none;
+    margin-left: 249px;
     
 }
+.rom{
+    display: flex;
+    width: 151px;
+    height: 170px;
+    margin-top: -48px;
+    margin-left: 200px;
+    align-items: center;
+    border: none;
+    /* margin: -49px; */
+    flex-direction: column;
+
+}
+.cpu{
+    display: flex;
+    width: 151px;
+    height: 170px;
+    align-items: center;
+    border: none;
+    /* margin: -49px; */
+    flex-direction: column;
+}
+.memoria_de_massa{
+    display: flex;
+    width: 152px;
+    height: 793px;
+    margin-top: -431px;
+    margin-left: 296px;
+    align-items: center;
+    border: none;
+    /* margin: -49px; */
+    flex-direction: column; 
+}
+.eprom{
+    display: flex;
+    width: 152px;
+    height: 793px;
+    margin-top: -431px;
+    margin-left: 296px;
+    align-items: center;
+    border: none;
+    justify-content: space-evenly;
+}
+
+input{
+    text-transform: uppercase;
+}
+
