--- a/cruzadinha.css
+++ b/cruzadinha.css
@@ -1,131 +1,100 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
+.containerGeral{
+    width: 80%;
+}
+
+td {
+    width: 2vw;
+    height: 4vh;
+    background-color: beige;
+    font-size: 150%;
+    justify-content: center;
+    text-align: center;
+    border: 0.5px solid black;
+
+}
+
+#respostaOculta {
+    background-color: black;        
+}
+.REGISTRADORES {
+    background-color: black;        
+}
+.ULA {
+    background-color: black;        
+}
+.DMA {
+    background-color: black;        
+
+}
+.DATABUS {
+    background-color: black;        
+
+}
+.ADDRESSBUS {
+    background-color: black;        
+
+}
+.FLASH{
+    background-color: black;        
+
+}
+.ROM{
+    background-color: black;        
+
+}
+.RAM{
+    background-color: black;        
+
+}
+.QUADCORE{
+    background-color: black;        
+
+}
+.CPU{
+    background-color: black;        
+
+}
+.CS{
+    background-color: black;        
+
+}
+.DUALCORE{
+    background-color: black;        
+
+}
+.CACHE{
+    background-color: black;        
+
+}
+.REGISTRADORES{
+    background-color: black;        
+
+}
+.MEMORIADEMASSA{
+    background-color: black;        
+
+}
+.I7{
+    background-color: black;        
+
+}
+.I5{
+    background-color: black;        
+
+}
+.THREADS{
+    background-color: black;        
+
+}
+.EPROM{
+    background-color: black;        
+
 }
 
 
-
-
-div{
-    height: 40px;
-    width: 40px;
-    margin-top: 10%;
-    border: solid 1px black;
+.sectionCruzada {
+    display: flex;
     align-items: center;
     justify-content: center;
-    display: flex;
+    margin-top: 5%;
 }
-.primeira div{
-    display: flex;
-    margin-left: 1px;
-}
-
-.ram {
-    display: flex;
-    justify-content: space-evenly;
-    width: 150px;
-    align-items: center;
-    border: none;
-    margin-left: 249px;
-    
-}
-.rom{
-    display: flex;
-    width: 151px;
-    height: 170px;
-    margin-top: -48px;
-    margin-left: 200px;
-    align-items: center;
-    border: none;
-    /* margin: -49px; */
-    flex-direction: column;
-
-}
-.cpu{
-    display: flex;
-    width: 151px;
-    height: 170px;
-    align-items: center;
-    border: none;
-    /* margin: -49px; */
-    flex-direction: column;
-}
-.memoria_de_massa{
-    display: flex;
-    width: 152px;
-    height: 793px;
-    margin-top: -474px;
-    margin-left: 296px;
-    align-items: center;
-    border: none;
-    /* margin: -49px; */
-    flex-direction: column; 
-}
-.eprom{
-    display: flex;
-    width: 267px;
-    height: 296px;
-    margin-top: -862px;
-    margin-left: 341px;
-    align-items: center;
-    border: none;
-    justify-content: space-evenly;
-}
-
-.i_sete{
-    display: flex;
-    width: 104px;
-    height: 53px;
-    margin-top: 61px;
-    margin-left: 344px;
-    align-items: center;
-    border: none;
-    justify-content: space-evenly;
-
-}
-.address{
-    display: flex;
-    width: 347px;
-    height: 0px;
-    margin-top: 18px;
-    margin-left: 344px;
-    align-items: center;
-    border: none;
-    justify-content: space-evenly;
-
-}
-.data_bus{
-    display: flex;
-    width: 172px;
-    height: 540px;
-    flex-direction: column;
-    margin-top: -84px;
-    margin-left: 383px;
-    align-items: center;
-    border: none;
-}
-.threads{
-    display: flex;
-    width: 160px;
-    height: 446px;
-    flex-direction: column;
-    margin-top: -670px;
-    margin-left: 486px;
-    align-items: center;
-    border: none;
-
-}
-.quadcore{
-        display: flex;
-    width: 347px;
-    height: 0px;
-    margin-top: 18px;
-    margin-left: 344px;
-    align-items: center;
-    border: none;
-    justify-content: space-evenly;
-}
-
-input{
-    text-transform: uppercase;
-}
-
