Agora sim ta tudo certinho

--- a/cruzada.css
+++ b/cruzada.css
@@ -16,7 +16,7 @@ td{
     padding: 0;
     width: 100px;
     height: 38px;
-    background-color: beige;
+    background-color: black;
     border: 0.5px solid black;
 
 }
