--- a/cruzada.css
+++ b/cruzada.css
@@ -49,12 +49,12 @@ td{
 
 img{
     margin-top: 2rem;
-    width: 25rem;
-    margin-left: 30rem;
+    width: 45rem;
+    margin-left: 20rem;
 }
 
 #div_msg {
-    color: black;
+    color: rgb(40, 40, 40);
 }
 
 h1{
